# genlayer

./: .env.example  README.md  TODO.md  pyproject.toml  setup_git_sync.ps1
.sisyphus/plans/: video-prompt-compiler.md
app/: main.py
app/agents/: prompt_refiner.py
app/api/: errors.py  routes.py  tasks.py  video.py
app/core/: config.py  logging.py  redis.py
app/schemas/: task.py  video.py
app/services/: kling.py  prompt_compiler.py  redis_task.py
docs/: PRD.md
tests/test_api/: test_video.py
